Modificação do link da imagem principal que foi quebrada quando mudei o nome do arquivo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/netflix-interface-DIO/css/main.css" />
+    <link rel="stylesheet" href="css/main.css" />
 
     <!-- responsividade -->
     <link rel="stylesheet" href="css/responsive.css" />
@@ -34,7 +34,7 @@
     </header>
 
     <main>
-      <div class="filme-principal">
+      <div class="anime-principal">
         <div class="container">
           <h3 class="titulo">ATTACK ON TITAN</h3>
           <p class="descricao">
